# rest-blog-api

./: Cargo.toml  README.md  rustfmt.toml
migrations/: 20240608002009_create_posts_table.sql
src/: main.rs
src/handlers/: post_handler.rs
src/models/: post.rs
src/routes/: routes.rs
